Prevent 'Apply Transform' for Objects with a linked mesh #36771

Closed
opened 2013-09-18 23:59:29 +02:00 by Michael Nischt · 3 comments

%%%--- Operating System, Graphics card ---
all

- Blender version with error, and version that worked ---

Occurs in 2.68a (and probably all below)

- Short description of error ---

I can 'Apply Location/Rotation/Scale' to an object with a LINKED (and therefore not editable) mesh as data. The pivot changes visually, so somehow the mesh is altered. Saving and Opening the file loads the the linked mesh without the transformation applied. So basically, the objects location/rotatiom is different after reopening.

It should NOT be possible to apply any transform (pos/rot/scale) to an object with a linked data block.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Load the default scene
  2. Link any mesh from another blend file
  3. Replace the cube's mesh with the linked one
  4. Move the cube object 2 unite along the x axis
  5. Apply Location to the object
  6. Save the file
  7. Remember the cube's position
  8. Close and reopen the file
  9. Observe the the cube;s position has changed
    %%%
%%%--- Operating System, Graphics card --- all - Blender version with error, and version that worked --- Occurs in 2.68a (and probably all below) - Short description of error --- I can 'Apply Location/Rotation/Scale' to an object with a LINKED (and therefore not editable) mesh as data. The pivot changes visually, so somehow the mesh is altered. Saving and Opening the file loads the the linked mesh without the transformation applied. So basically, the objects location/rotatiom is different after reopening. It should NOT be possible to apply any transform (pos/rot/scale) to an object with a linked data block. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Load the default scene 1. Link any mesh from another blend file 2. Replace the cube's mesh with the linked one 3. Move the cube object 2 unite along the x axis 4. Apply Location to the object 5. Save the file 6. Remember the cube's position 7. Close and reopen the file 8. Observe the the cube;s position has changed %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60227.%%%

%%%fixed r60227.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36771
No description provided.