fix [#36771] Prevent 'Apply Transform' for Objects with a linked mesh